--- a/servers.html
+++ b/servers.html
@@ -15,6 +15,7 @@
                 <li><a href="terms.html">利用規約</a></li>
                 <li><a href="privacy.html">プライバシーポリシー</a></li>
                 <li><a href="docs.html">ドキュメント</a></li>
+                <link rel="icon" type="image/png" href="images/favicon.png"> <!-- PNG形式 -->
             </ul>
         </nav>
     </header>
