変更履歴の追加

--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
             <button class="install-btn" onclick="location.href='https://discord.com/invite/Agf97X5Jv3'">サポートサーバー</button>
             <button class="install-btn" onclick="location.href='https://x.com/akane_bot_main'">公式X</button>
         </section>
-
+<section>
+    <div class="terms-section">
+        <h2>最近の変更履歴</h2>
+        <p>プレフィックスの変更 'a!' (2/27)</p>
+    </div>
+</section>
 <!-- サポートチームセクション -->
 <section class="support-team">
     <h2>サポートチーム</h2>
