--- a/servers.html
+++ b/servers.html
@@ -12,10 +12,10 @@
         <div class="logo">茜-あかね-</div>
         <nav>
             <ul>
-                <li><a href="index.html">ホーム</a></li>
-                <li><a href="terms.html">利用規約</a></li>
-                <li><a href="privacy.html">プライバシーポリシー</a></li>
-                <li><a href="docs.html">ドキュメント</a></li>
+                <li><a href="index">ホーム</a></li>
+                <li><a href="terms">利用規約</a></li>
+                <li><a href="privacy">プライバシーポリシー</a></li>
+                <li><a href="docs">ドキュメント</a></li>
             </ul>
         </nav>
     </header>
