--- a/status.html
+++ b/status.html
@@ -143,7 +143,7 @@
   <script>
     const bots = [
       { name: "茜 (Akane)", url: "https://akane-quin.glitch.me/status" },
-      { name: "小春 (Koharu)", url: "https://koharu-quin-amber.glitch.me/status" }
+      { name: "小春 (Koharu)", url: "https://koharu-quin-amber.glitch.me/statusgithub" }
     ];
 
     const translations = {
