--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <section>
     <div class="terms-section">
         <h2>最近の変更履歴</h2>
-        <p>プレフィックスの変更 'a!' (2/27)</p>
+        <p>7/4より起動停止-復旧予定未定</p>
     </div>
 </section>
 <!-- サポートチームセクション -->
